[gd_scene load_steps=8 format=3 uid="uid://cpe4coxgldw1n"]

[ext_resource type="Script" uid="uid://b3xv3uc1h88yu" path="res://settings_menu/settings_menu.gd" id="2_2evie"]
[ext_resource type="Script" uid="uid://dsc5xjeg5wfhx" path="res://settings_menu/graphics_settings_menu.gd" id="2_djn8w"]
[ext_resource type="Script" uid="uid://d3qfvx2bfsgwl" path="res://settings_menu/restricted_char_line_edit.gd" id="2_eqstb"]
[ext_resource type="Script" uid="uid://dcxyjhowt3l8c" path="res://settings_menu/audio_settings_menu.gd" id="4_iav5d"]
[ext_resource type="Script" uid="uid://gfenp7xcjyi7" path="res://settings_menu/gameplay_settings_menu.gd" id="5_nrc7u"]
[ext_resource type="Script" uid="uid://bgdu8j6c5hk45" path="res://settings_menu/controls_settings_menu.gd" id="6_gdf3w"]
[ext_resource type="Script" uid="uid://cynxg2j521gka" path="res://settings_menu/confirm_resolution_change_popup.gd" id="7_cv3a6"]

[node name="SettingsMenu" type="Control" groups=["settings_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2evie")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -256.0
offset_right = 28.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -254.0
offset_right = -34.0
offset_bottom = -229.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
horizontal_alignment = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -221.5
offset_right = 380.0
offset_bottom = 221.5
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Graphics" type="ScrollContainer" parent="TabContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_djn8w")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buffer" type="Control" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution:"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="TabContainer/Graphics/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="CustomResolution" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/CustomResolution"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Inputs" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer/CustomResolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XNumberInput" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/CustomResolution/Inputs"]
layout_mode = 2
size_flags_horizontal = 3
text = "1920"
virtual_keyboard_type = 2
script = ExtResource("2_eqstb")
whitelisted_chars = "1234567890"
set_to_this_on_blank = "1920"

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/CustomResolution/Inputs"]
layout_mode = 2
text = "x"

[node name="YNumberInput" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/CustomResolution/Inputs"]
layout_mode = 2
size_flags_horizontal = 3
text = "1080"
virtual_keyboard_type = 2
script = ExtResource("2_eqstb")
whitelisted_chars = "1234567890"
set_to_this_on_blank = "1080"

[node name="ConfirmResolutionButton" type="Button" parent="TabContainer/Graphics/VBoxContainer/CustomResolution/Inputs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/CustomResolution/Inputs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.35

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/CustomResolution"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Fullscreen" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Graphics/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Vsync" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vsync:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Graphics/VBoxContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="FpsDisplay" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/FpsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fps Display:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Graphics/VBoxContainer/FpsDisplay"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/FpsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="DecalsBulletHoles" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer/DecalsBulletHoles"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Bullet Hole Decals:"
horizontal_alignment = 2

[node name="NumberInput" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/DecalsBulletHoles"]
layout_mode = 2
size_flags_horizontal = 3
text = "50"
virtual_keyboard_type = 2
script = ExtResource("2_eqstb")
whitelisted_chars = "1234567890"
set_to_this_on_blank = "1"

[node name="Control" type="Control" parent="TabContainer/Graphics/VBoxContainer/DecalsBulletHoles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Audio" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_iav5d")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buffer" type="Control" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Control" type="Control" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MusicVolume" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Control" type="Control" parent="TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="SFXVolume" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sfx Volume:"
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Control" type="Control" parent="TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Gameplay" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_nrc7u")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buffer" type="Control" parent="TabContainer/Gameplay/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Difficulty" type="HBoxContainer" parent="TabContainer/Gameplay/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Gameplay/VBoxContainer/Difficulty"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty:"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="TabContainer/Gameplay/VBoxContainer/Difficulty"]
layout_mode = 2
size_flags_horizontal = 3
selected = 2
item_count = 4
popup/item_0/text = "Invulnerable"
popup/item_0/id = 0
popup/item_1/text = "Easy"
popup/item_1/id = 1
popup/item_2/text = "Normal"
popup/item_2/id = 2
popup/item_3/text = "Hard"
popup/item_3/id = 3

[node name="Control" type="Control" parent="TabContainer/Gameplay/VBoxContainer/Difficulty"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Controls" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("6_gdf3w")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buffer" type="Control" parent="TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="MouseSensitivity" type="HBoxContainer" parent="TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse Sensitivity:"
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="TabContainer/Controls/VBoxContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 0.17
step = 0.001
value = 0.1

[node name="Control" type="Control" parent="TabContainer/Controls/VBoxContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MouseInvertX" type="HBoxContainer" parent="TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/MouseInvertX"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Mouse Horizontal:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Controls/VBoxContainer/MouseInvertX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Controls/VBoxContainer/MouseInvertX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MouseInvertY" type="HBoxContainer" parent="TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/MouseInvertY"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Mouse Vertical:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="TabContainer/Controls/VBoxContainer/MouseInvertY"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TabContainer/Controls/VBoxContainer/MouseInvertY"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Buffer2" type="Control" parent="TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="ConfirmResolutionChangePopup" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_cv3a6")

[node name="Timer" type="Timer" parent="ConfirmResolutionChangePopup"]

[node name="ColorRect" type="ColorRect" parent="ConfirmResolutionChangePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.384314)

[node name="ColorRect2" type="ColorRect" parent="ConfirmResolutionChangePopup"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -43.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ConfirmResolutionChangePopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -24.5
offset_right = 100.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Resolution Changed.
Reverting in (%s) seconds."

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmResolutionChangePopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = 32.0
offset_right = 139.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeepResolutionButton" type="Button" parent="ConfirmResolutionChangePopup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keep Changes"

[node name="RevertResolutionButton" type="Button" parent="ConfirmResolutionChangePopup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel "
